--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,685 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* LOGIN AND REGISTRATION FORMS */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login-form,
+.register-form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 1rem;
+}
+
+.login-form h1,
+.register-form h1 {
+  margin-bottom: 1rem;
+}
+
+.login-form div label {
+  font-size: 0.9rem;
+}
+
+.login-form div input {
+  accent-color: #7b90aa;
+}
+
+.login-form input,
+.register-form input {
+  padding: 0.625rem;
+  border: solid 1px #7b90aa;
+}
+
+.login-form input:focus,
+.register-form input:focus {
+  border: 3px solid #7b90aa;
+  outline: 0;
+}
+
+.checkbox-container {
+  display: flex;
+  gap: 0.5rem;
+}
+
+/* LOGIN AND REGISTRATION PAGES */
+
+.login-page,
+.register-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  height: 100vh;
+}
+
+.login-register-btns-container,
+.register-form button,
+.register-form input,
+.login-form input,
+.login-form button,
+.login-form p,
+select {
+  z-index: 1;
+}
+
+.login-register-btns-container {
+  display: flex;
+  gap: 1.5rem;
+}
+
+.login-form p {
+  background: none;
+  font-size: 0.9rem;
+}
+
+select {
+  padding: 0.3125rem;
+  color: rgb(120, 120, 120);
+  border: 1px solid #7b90aa;
+  width: 7.5rem;
+  margin-bottom: 2.1875rem;
+  outline: none;
+}
+
+select:focus {
+  border: 3px solid #7b90aa;
+}
+
+select option {
+  font-size: 0.875rem;
+}
+
+/* AUTH PAGE */
+.auth-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  height: 100vh;
+}
+
+.auth-page-welcome {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 3rem;
+}
+
+.auth-page h1 {
+  margin-bottom: 1rem;
+}
+
+.auth-page h2 {
+  text-align: center;
+  margin: 1.25rem 6.25rem 0rem 6.25rem;
+  max-width: 600px;
+}
+
+/* TOOLBAR */
+
+.toolbar-wrapper {
+  background-color: #b4c4d8;
+  width: 100%;
+}
+
+.toolbar {
+  padding: 1.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  max-width: 64rem;
+  margin: 0 auto;
+}
+
+.toolbar-links-container {
+  display: flex;
+  gap: 0.9rem;
+}
+
+.toolbar a {
+  text-decoration: none;
+  font-size: 1.5rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.toolbar a:hover {
+  color: #7b90aa;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.logout-btn {
+  width: 7rem;
+  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+  background: #7b90aa;
+  border: 2px solid #7b90aa;
+  border-radius: 0.3125rem;
+  color: white;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.logout-btn:hover {
+  background-color: #6a93c9;
+  border-color: #6a93c9;
+  transition: 0.3s;
+  box-shadow: 0px 0px 22px 0px rgba(255, 255, 255, 0.75);
+  -webkit-box-shadow: 0px 0px 22px 0px rgba(255, 255, 255, 0.75);
+  -moz-box-shadow: 0px 0px 22px 0px rgba(255, 255, 255, 0.75);
+}
+
+.unread-messages-number-pink {
+  color: #e34db6;
+}
+
+.unread-messages-number-green {
+  color: rgb(139, 240, 201);
+}
+
+/* PROFILE PAGE */
+
+.profile-page-wrapper {
+  width: 100%;
+}
+
+.profile-page {
+  max-width: 64rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0rem auto;
+}
+
+.profile-page input {
+  padding: 0.625rem;
+  border: solid 1px #7b90aa;
+}
+
+.profile-page input:focus {
+  border: 3px solid #7b90aa;
+  outline: 0;
+}
+
+.profile-image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  margin: 1.25rem;
+}
+
+.user-image {
+  width: 15.625rem;
+  height: 15.625rem;
+  object-fit: cover;
+  border: 1px solid #7b90aa;
+}
+
+.change-image-info {
+  max-width: 11.25rem;
+  text-align: center;
+}
+
+.profile-page-info {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin: 1.25rem;
+}
+
+.topics-created-in-forum {
+  color: #e34db6;
+  padding-bottom: 0.625rem;
+  border-bottom: solid 1px #7b90aa;
+}
+
+.posts-written-in-forum {
+  color: #e34db6;
+  padding-bottom: 0.625rem;
+  border-bottom: solid 1px #7b90aa;
+}
+
+.answers {
+  color: black;
+}
+
+/* FORUM PAGE */
+
+.forum-page-wrapper {
+  width: 100%;
+}
+
+.forum-page {
+  max-width: 64rem;
+  margin: 0rem auto;
+}
+
+.create-topic {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.create-topic input {
+  padding: 0.625rem;
+  border: solid 1px #7b90aa;
+}
+
+.create-topic input:focus {
+  border: 3px solid #7b90aa;
+  outline: 0;
+}
+
+.forum-page-topic {
+  padding: 1rem;
+  border: solid 1px #7b90aa;
+  margin: 1rem;
+  cursor: pointer;
+}
+
+.forum-page-topic:hover {
+  border: solid 3px #7b90aa;
+}
+
+/* CREATE DISCUSSION PAGE */
+
+.create-discussion-page-wrapper {
+  width: 100%;
+}
+
+.create-discussion-page {
+  max-width: 64rem;
+  margin: 0rem auto;
+}
+
+.create-discussion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.create-discussion input {
+  padding: 0.625rem;
+  border: solid 1px #7b90aa;
+}
+
+.create-discussion input:focus {
+  border: 3px solid #7b90aa;
+  outline: 0;
+}
+
+.discussion {
+  padding: 1rem;
+  border: solid 1px #7b90aa;
+  margin: 1rem;
+  cursor: pointer;
+}
+
+.discussion:hover {
+  border: solid 3px #7b90aa;
+}
+
+/* SINGLE DISCUSSION PAGE */
+
+.single-discussion-page-wrapper {
+  width: 100%;
+}
+
+.single-discussion-page {
+  max-width: 64rem;
+  margin: 0rem auto;
+}
+
+.discussion-info {
+  padding: 1rem;
+  border: solid 1px #7b90aa;
+  margin: 1rem 1rem 4rem 1rem;
+  background-color: #e0e9f5;
+}
+
+.discussion-title {
+  border-bottom: solid 1px black;
+}
+
+.discussion-owner-info {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.username-btn-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.discussion-owner-username {
+  margin-bottom: 0.5rem;
+}
+
+.discussion-owner-info img {
+  border: solid 1px #7b90aa;
+  width: 4.5625rem;
+  height: 4.5625rem;
+  object-fit: cover;
+}
+
+.create-post {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.create-post input {
+  padding: 0.625rem;
+  border: solid 1px #7b90aa;
+}
+
+.create-post input:focus {
+  border: 3px solid #7b90aa;
+  outline: 0;
+}
+
+.post {
+  padding: 1rem;
+  border: solid 1px #7b90aa;
+  margin: 1rem;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.image-video-container {
+  display: flex;
+  flex-direction: column;
+  align-items: top;
+  gap: 1rem;
+  width: 100%;
+}
+
+.post img {
+  object-fit: cover;
+  height: 19.6875rem;
+  width: 100%;
+  border: solid 1px #7b90aa;
+}
+
+.video-container {
+  width: 100%;
+}
+
+.post iframe {
+  width: 100%;
+  border: solid 1px #7b90aa;
+}
+
+.send-message-btn {
+  width: 8rem;
+  padding: 0.5rem 0rem 0.4rem 0rem;
+  background: #7b90aa;
+  border: 2px solid #7b90aa;
+  border-radius: 0.3125rem;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.send-message-btn:hover {
+  background-color: #98adc9;
+  border-color: #98adc9;
+  transition: 0.3s;
+}
+
+/* SEND MESSAGE MODAL */
+
+.send-message-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  overflow-y: auto;
+}
+
+.send-message-modal h2 {
+  color: rgb(58, 58, 58);
+}
+
+.send-message-modal {
+  background: white;
+  padding: 1.25rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.send-message-modal-buttons-container {
+  display: flex;
+  justify-content: space-around;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.send-message-modal input {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding: 0.625rem;
+  border: solid 1px #7b90aa;
+  width: 17.375rem;
+}
+
+.send-message-modal input:focus {
+  border: solid 3px #7b90aa;
+  outline: none;
+}
+
+/* MESSAGES PAGE */
+
+.messages-page-wrapper {
+  width: 100%;
+}
+
+.messages-page {
+  max-width: 64rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0rem auto;
+}
+
+.messages-sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.5rem;
+  gap: 1rem;
+  padding: 0.625rem;
+}
+
+.messages-sidebar-user {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.625rem;
+  border: solid 2px #7b90aa;
+  border-radius: 0.625rem;
+  cursor: pointer;
+  min-width: 10rem;
+  background-color: #e5edf6;
+}
+
+.messages-sidebar-user:hover {
+  border: solid 3px #7b90aa;
+}
+
+.unread-messages {
+  background-color: #f6c2e7;
+}
+
+.messages-sidebar img {
+  width: 3rem;
+  height: 3rem;
+  object-fit: cover;
+  border: solid 1px #7b90aa;
+}
+
+/* CHAT PAGE */
+
+.chat-page-wrapper {
+  width: 100%;
+}
+
+.chat-page {
+  max-width: 64rem;
+  display: flex;
+  align-items: flex-start;
+  margin: 0rem auto;
+  gap: 1rem;
+}
+
+.chat-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 3rem;
+  margin-right: 1.25rem;
+}
+
+.chat-messages-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  margin-top: 0.9375rem;
+}
+
+.chat-message {
+  border: solid 1px #7b90aa;
+  border-radius: 0.625rem;
+  padding: 0.625rem;
+  width: fit-content;
+}
+
+.own-message {
+  background-color: #e5edf6;
+  align-self: flex-end;
+}
+
+.chat-send-message {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.chat-send-message input {
+  padding: 0.625rem;
+  border: solid 1px #7b90aa;
+  width: 100%;
+}
+
+.chat-send-message input:focus {
+  outline: 0;
+  border: solid 3px #7b90aa;
+}
+
+/* ---ELEMENTS--- */
+
+/* PRIMARY BUTTON */
+
+.primary-btn {
+  width: 8rem;
+  padding: 0.5rem 0rem 0.4rem 0rem;
+  background: #7b90aa;
+  border: 2px solid #7b90aa;
+  border-radius: 0.3125rem;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  margin: 3px;
+}
+
+.primary-btn:hover {
+  background-color: #98adc9;
+  border-color: #98adc9;
+  transition: 0.3s;
+}
+
+.hidden {
+  display: none;
+}
+
+/* BACKGROUND IMAGE */
+
+.background-image {
+  background-image: url('./components/Images/Forum.jpg');
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.2;
+}
+
+/* ERROR */
+
+.error {
+  font-size: 0.9rem;
+  color: #e34db6;
+}
+
+/* TABLETS AND BIGGER SCREENS */
+
+@media screen and (min-width: 768px) {
+  .image-video-container {
+    flex-direction: row;
   }
-  to {
-    transform: rotate(360deg);
+
+  .post img {
+    width: 50%;
+  }
+
+  .video-container {
+    width: 50%;
+  }
+
+  .post iframe {
+    width: 100%;
+  }
+
+  .profile-page {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .toolbar-links-container {
+    gap: 4rem;
   }
 }
